# ShotSceneGen

./: README.md
ShotSceneGen/: LICENSE  README.md  pyproject.toml  setup.py
ShotSceneGen/text_to_shots/: core.py  models.py  utils.py
