[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "text_to_shots"
version = "1.0.0"
description = "AI-powered package to convert text stories into film scenes and shots"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yavuz Kaan Akyuz", email = "your-email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/yavuzkaanakyuz/ShotSceneGen"
Repository = "https://github.com/yavuzkaanakyuz/ShotSceneGen"
"Bug Tracker" = "https://github.com/yavuzkaanakyuz/ShotSceneGen/issues"

[tool.setuptools]
packages = ["text_to_shots"]

[tool.setuptools.package-data]
text_to_shots = ["*.txt", "*.json", "*.md"]